--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     },
     "require": {
-        "slim/slim": "^4.0",jh
+        "slim/slim": "^4.0",
         "slim/psr7": "^1.7",
         "vlucas/phpdotenv": "^5.6",
         "robmorgan/phinx": "^0.16.6",
