--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,6 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
-    env_file:
-      - .env
     depends_on:
       - db
     networks:
@@ -16,11 +14,10 @@ services:
 
   db:
     image: postgres:15
-    container_name: php-news-scraper-db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: php_news_scraper
+      POSTGRES_DB: db
     ports:
       - "5432:5432"
     volumes:
