--- a/phinx.yml
+++ b/phinx.yml
@@ -7,7 +7,7 @@ environments:
     default_environment: "development"
     development:
         adapter: "pgsql"
-        host: "postgres"
+        host: "db"
         name: "db"
         user: "postgres"
         pass: "postgres"
